--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Expack</h1>
-    <p class="description">Express and Webpack Boilerplate App with middleware</p>
+    <p class="description">Express and Webpack Boilerplate App with Hot Module Reloading</p>
     <div class="awful-selfie"></div>
 </body>
 </html>
